--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -119,7 +119,7 @@ description: Sint iusto magnam sapiente
 <!-- Start Email Sign Up -->
 <section class="bg-yellow-pastel">
     <div class="container mx-auto px-12 sm:px-14 md:px-20 lg:px-40 xl:px-72 2xl:px-96 py-10 md:py-16">
-        <div class="grid grid-cols-6 gap-12 flex justify-center">
+        <div class="grid grid-cols-6 gap-12 justify-center">
             <div class="col-span-6 md:col-span-2 flex justify-center md:justify-end md:items-center">
                 <svg class="w-48 lg:w-72 h-32 lg:h-56"><use xlink:href="img/sprite.svg#wood-blocks-icon"></use></svg>
             </div>
@@ -130,8 +130,8 @@ description: Sint iusto magnam sapiente
                     <form class="max-w-full">
                         <div class="md:flex">
                         <label for="email" class="sr-only">Email Address</label>
-                        <input id="email" class="bg-white border border-gray-300 rounded-full text-gray-dark text-sm md:text-base px-5 py-3 lg:px-6 lg:py-4 w-full" name="email" type="text" required placeholder="Your email...">
-                        <button class="bg-gray-rich rounded-full text-white font-bold text-sm md:text-base px-5 py-3 lg:px-6 lg:py-4 mt-5 md:mt-0 ml-0 md:ml-4 hover:bg-gray-700">Subscribe</button>
+                        <input id="email" class="bg-white border border-gray-300 rounded-full text-gray-dark text-sm md:text-base px-5 py-3 lg:px-6 lg:py-4 w-full focus-visible:outline-none focus:ring-2 focus:ring-gray-600" name="email" type="text" required placeholder="Your email...">
+                        <button class="bg-gray-rich rounded-full text-white font-bold text-sm md:text-base px-5 py-3 lg:px-6 lg:py-4 mt-5 md:mt-0 ml-0 md:ml-4 hover:bg-gray-700 focus-visible:outline-none focus:bg-gray-700">Subscribe</button>
                         </div>
                     </form>
                 </div>
